# jira-dependency-graph

./: Makefile  README.md  app.py  jira-dependency-graph.py  mermaid_diagram  pyproject.toml
.streamlit/: config.toml
containers/: Dockerfile
